library/general/replicasknative/samples/replicasknative/example_disallowed.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: helloworld-go
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "8"
        autoscaling.knative.dev/maxScale: "5"
    spec:
      containers:
        - image: gcr.io/knative-samples/helloworld-go
