library/general/replicasknative/samples/replicasknative/example_empty_annotations.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: helloworld-go
spec:
  template:
    metadata:
      creationTimestamp: '2022-12-13T09:21:04Z'
    spec:
      containers:
        - image: gcr.io/knative-samples/helloworld-go
